imperative-tests/tests/invalid_enums/unnamed_fields.rs
use imperative::InstructionSet;
#[derive(InstructionSet)]
enum Instructionset {
    #[ opcode = "0xff_vv_ff" ]
    A(u8),
}

fn main() {}